--- a/data/filetransfer.conf
+++ b/data/filetransfer.conf
@@ -1,32 +1,32 @@
 # Configuration file for FileTransfer
 
 # Enter your keyfile directory. It should be passwordless for automation
-sshKeyFile="/home/shane/.ssh/rsync"
+sshKeyFile=
 
 # Your remote user name
-remoteuser="assassin2112"
+remoteuser=
 
 # Remote server name
-remoteserver="gyro.whatbox.ca"
+remoteserver=
 
 # Folder on the remote server that will be synced
-sourcefolder="/home/assassin2112/finished/"
+sourcefolder=
 
 #Folder on home server to sync to
-targetfolder="/media/MediaDrive3/downloads/"
+targetfolder=
 
 # This is for Sorttv, directory to sort from and directories to sort to
-directorytosort="/media/MediaDrive3/downloads/"
-moviedirectory="/media/MediaDrive3/movies"
-tvdirectory="/media/MediaDrive3/tvseries"
+directorytosort=
+moviedirectory=
+tvdirectory=
 
 # Specify a log folder here, to keep track of downloads
-logfolder="/home/shane/Logs/TransferLogs/"
+logfolder=
 
 # Set the rate limit here
 ratelimit="--bwlimit=4096"
 
 # Specify the perl installation location (use whereis perl) and sorttv installation
-perlinstallation="/usr/local/bin/perl"
-sorttvinstallation="$HOME""/programs/sorttv/sorttv.pl"
+perlinstallation=
+sorttvinstallation=
 
