--- a/data/filetransfer.conf
+++ b/data/filetransfer.conf
@@ -1,24 +1,24 @@
 # Configuration file for FileTransfer
 
 # Enter your keyfile directory. It should be passwordless for automation
-sshKeyFile=
+sshKeyFile=""
 
 # Your remote user name
-remoteuser=
+remoteuser=""
 
 # Remote server name
-remoteserver=
+remoteserver=""
 
 # Folder on the remote server that will be synced
-sourcefolder=
+sourcefolder=""
 
 #Folder on home server to sync to
-targetfolder=
+targetfolder=""
 
 # This is for Sorttv, directory to sort from and directories to sort to
-directorytosort=
-moviedirectory=
-tvdirectory=
+directorytosort=""
+moviedirectory=""
+tvdirectory=""
 
 # Specify a log folder here, to keep track of downloads
 logfolder=
@@ -27,6 +27,6 @@ logfolder=
 ratelimit="--bwlimit=4096"
 
 # Specify the perl installation location (use whereis perl) and sorttv installation
-perlinstallation=
-sorttvinstallation=
+perlinstallation=""
+sorttvinstallation=""
 
