--- a/data/filetransfer.conf
+++ b/data/filetransfer.conf
@@ -21,7 +21,7 @@ moviedirectory=""
 tvdirectory=""
 
 # Specify a log folder here, to keep track of downloads
-logfolder=
+logfolder=""
 
 # Set the rate limit here
 ratelimit="--bwlimit=4096"
@@ -30,3 +30,12 @@ ratelimit="--bwlimit=4096"
 perlinstallation=""
 sorttvinstallation=""
 
+# If you want to use symbolic links (to link movie/tv show directories on new drives to older drive)
+# just set up the below, otherwise, leave it empty. Set "useSymbolicLinking" to "yes"
+useSymbolicLinking=""
+linkToLocationMovies=""
+# EXAMPLE: linkToLocationMovies="/media/MediaDrive1/Movies/"
+linkFromLocationMovies=""
+# EXAMPLE: linkFromLocationMovies="/media/MediaDrive3/movies/*"
+linkToLocationTV="/media/MediaDrive1/TV Series/"
+linkFromLocationTV="/media/MediaDrive3/tvseries/*"
