--- a/data/filetransfer.conf
+++ b/data/filetransfer.conf
@@ -36,6 +36,6 @@ useSymbolicLinking=""
 linkToLocationMovies=""
 # EXAMPLE: linkToLocationMovies="/media/MediaDrive1/Movies/"
 linkFromLocationMovies=""
-# EXAMPLE: linkFromLocationMovies="/media/MediaDrive3/movies/*"
-linkToLocationTV="/media/MediaDrive1/TV Series/"
-linkFromLocationTV="/media/MediaDrive3/tvseries/*"
+# EXAMPLE: linkFromLocationMovies="/media/MediaDrive3/movies/"
+linkToLocationTV=""
+linkFromLocationTV=""
